# arduino-cmake

./: .gitignore  CMakeLists.txt
cmake/Platform/: Arduino.cmake
example/: CMakeLists.txt
